# kormos

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  index.rst
kormos/: __init__.py  model.py  models.py  optimizers.py
kormos/utils/: cache.py  scipy.py
tests/kormos/: test_model.py  test_models.py  test_optimizers.py
tests/kormos/utils/: test_cache.py  test_scipy.py
