[build-system]
requires = [
  "setuptools>=61.0",
  "numpy",
  "tensorflow>=2",
  "scipy",
]
build-backend = "setuptools.build_meta"

[project]
name = "kormos"
version = "0.1.0"
authors = [
  { name="Michael B Hynes", email="mike.hynes.rhymes@gmail.com" },
]
description = "An interface to `scipy.optimize.minimize` for deterministically training `keras` models."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
"Homepage" = "https://github.com/mbhynes/kormos"
"Bug Tracker" = "https://github.com/mbhynes/kormos/issues"
